--- a/.github/actions/npm/jobs/publish-github-packages/action.yml
+++ b/.github/actions/npm/jobs/publish-github-packages/action.yml
@@ -123,7 +123,7 @@ runs:
           DISPLAY_VERSION="v$VERSION"
         fi
 
-        echo "- ✅ GitHub Packages: Published [${{ inputs.package-name }} $DISPLAY_VERSION](https://github.com/orgs/$ORG_NAME/packages/npm/$PACKAGE_NAME)" >> $GITHUB_STEP_SUMMARY
+        echo "- ✅ GitHub Packages: Published [${{ inputs.package-name }} $DISPLAY_VERSION](https://github.com/$ORG_NAME/$PACKAGE_NAME/pkgs/npm/$PACKAGE_NAME)" >> $GITHUB_STEP_SUMMARY
 
     - name: Update Summary - GitHub Packages Dry Run Success
       if: steps.publish-package.outputs.published == 'true' && inputs.dry-run == 'true'
