fix: resolve tag health workflow permissions and filter test releases
- Enable permissions (contents: write, actions: write) for unified-fix-orphaned-releases job
- Add filtering logic to skip test/debug releases in fix-orphaned-releases action
- Filter patterns include: a##-test-debug-*, gh#-test-debug-*, cleanup-*-test, *-test, *-debug
- Prevents workflow failures from attempting to recreate missing test release tags
- Improves workflow reliability by focusing on production releases only

--- a/.github/workflows/reusable-tag-health.yml
+++ b/.github/workflows/reusable-tag-health.yml
@@ -304,9 +304,9 @@ jobs:
     if: inputs.run_unified_tag_health == true && always() && needs.setup-shared.result == 'success'
     needs: [detect-gpg, setup-shared]
     runs-on: ubuntu-latest
-    # permissions:
-    #   contents: write
-    #   actions: write
+    permissions:
+      contents: write
+      actions: write
     outputs:
       fixed_count: ${{ steps.fix-orphaned-releases.outputs.fixed-count }}
       summary-json: ${{ steps.fix-orphaned-releases.outputs.summary-json }}
