fix: add missing actions: write permissions to workflow callers
- Added actions: write permission to local-update-major-version-tags.yml
- Added actions: write permission to example update-major-version-tags.yml
- Added actions: write permission to workflow-update-major-version-tags.yml
- Fixes error: nested job 'unified-fix-orphaned-releases' requesting 'actions: write' but only allowed 'actions: none'
- Required for reusable-tag-health.yml workflow to function properly

--- a/.github/workflows/workflow-update-major-version-tags.yml
+++ b/.github/workflows/workflow-update-major-version-tags.yml
@@ -74,6 +74,7 @@ jobs:
     uses: CLDMV/.github/.github/workflows/reusable-tag-health.yml@v1
     permissions:
       contents: write
+      actions: write
     with:
       debug: ${{ inputs.debug }}
       run_unified_tag_health: true
