fix: prevent bash JSON parsing errors in GitHub Actions
- Fixed check-release-commit action to use env vars instead of direct bash export for JSON
- Fixed reusable-tag-health workflow to use env vars for tags_detailed JSON output
- Prevents 'unexpected EOF while looking for matching quote' errors when JSON contains quotes
- Both actions now safely handle JSON data containing quotes, newlines, and special characters
- Resolves create-release-pr workflow failures due to bash parsing of commit JSON data

--- a/.github/actions/git/steps/check-release-commit/action.yml
+++ b/.github/actions/git/steps/check-release-commit/action.yml
@@ -39,9 +39,9 @@ runs:
     - name: Check for release commit and analyze version bump
       id: check
       shell: bash
+      env:
+        COMMITS: ${{ steps.commit-range.outputs.commits }}
+        HAS_COMMITS: ${{ steps.commit-range.outputs.has-commits }}
       run: |
-        export COMMITS='${{ steps.commit-range.outputs.commits }}'
-        export HAS_COMMITS="${{ steps.commit-range.outputs.has-commits }}"
-
         # Run the Node.js script
         node "${{ github.action_path }}/action.mjs"
