fix: Enhance release detection logic with fallback strategies and debugging
- Add robust default branch detection when branch info is null/undefined
- Implement merge-base fallback when tag-based commit range yields no results
- Add extensive debugging output for commit range calculation and PR detection
- Improve race condition handling in PR creation with better error messages
- Fix release commit detection on feature/release branches
- Add orphaned tag detection and handling for squash-merge scenarios

--- a/.github/actions/git/steps/check-release-commit/action.yml
+++ b/.github/actions/git/steps/check-release-commit/action.yml
@@ -35,6 +35,8 @@ runs:
       with:
         debug: "true"
         exclude-version: ${{ inputs.exclude-version }}
+      env:
+        DEBUG: "true"
 
     - name: Check for release commit and analyze version bump
       id: check
