fix: resolve GitHub Actions permissions error for actions:write
- Add workflow-level permissions (contents:write, actions:write) to reusable-tag-health.yml
- Add workflow-level permissions (contents:write, actions:write) to workflow-update-major-version-tags.yml
- Fixes error: 'nested job is requesting actions:write, but is only allowed actions:none'
- Ensures proper permission inheritance chain: Individual Repo  Org Workflow  Reusable Workflow  Jobs
- Required for unified-fix-orphaned-releases job that needs actions:write permission

--- a/.github/workflows/reusable-tag-health.yml
+++ b/.github/workflows/reusable-tag-health.yml
@@ -142,6 +142,10 @@ on:
                 description: "Detailed JSON summary of all operations"
                 value: ${{ jobs.unified-summarize-results.outputs.summary-json }}
 
+permissions:
+    contents: write
+    actions: write
+
 jobs:
     # Validate that tag commits are reachable from main/master
     validate-tag-source:
