fix(npm): prevent 'Version not changed' error in update-package-version action
- Add version comparison check before attempting npm/yarn version update
- Skip update when current version already matches target version
- Prevents workflow failures when package.json already has explicit version
- Maintains compatibility with both npm and yarn package managers
- Resolves issue with release commits containing explicit versions (e.g., 'release: v2.4.2')

--- a/.github/actions/npm/steps/update-package-version/action.yml
+++ b/.github/actions/npm/steps/update-package-version/action.yml
@@ -19,9 +19,16 @@ runs:
         NEW_VERSION: ${{ inputs.new-version }}
         PACKAGE_MANAGER: ${{ inputs.package-manager }}
       run: |
-        if [ "$PACKAGE_MANAGER" = "yarn" ]; then
-          yarn version --new-version "$NEW_VERSION" --no-git-tag-version
+        CURRENT_VERSION=$(node -p "require('./package.json').version")
+
+        if [ "$CURRENT_VERSION" = "$NEW_VERSION" ]; then
+          echo "📝 Package.json already at version $NEW_VERSION - no update needed"
         else
-          npm version "$NEW_VERSION" --no-git-tag-version
+          echo "📝 Updating package.json from $CURRENT_VERSION to $NEW_VERSION"
+          if [ "$PACKAGE_MANAGER" = "yarn" ]; then
+            yarn version --new-version "$NEW_VERSION" --no-git-tag-version
+          else
+            npm version "$NEW_VERSION" --no-git-tag-version
+          fi
+          echo "📝 Updated package.json to version $NEW_VERSION"
         fi
-        echo "📝 Updated package.json to version $NEW_VERSION"
